# glow-pytorch

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
.misc/: notes.md
.misc/scripts/: train.py
src/configs/: celeba.yaml  train.yaml
src/configs/dataset/: celeba.yaml  dataset.yaml
src/configs/ddp/: ddp.yaml
src/configs/model/: baseline.yaml
src/model/: __init__.py  actnorm.py  flow.py  flow_block.py  glow.py  invert_block.py  invert_conv.py
src/model/affine_coupling/: __init__.py  affine_coupling.py  net.py  zero_conv.py
src/modules/dataset/: celeba.py  ddp.py  dogs.py
src/modules/logger/: __init__.py  logger.py
src/modules/trainer/: __init__.py  ddp_trainer.py  trainer.py
src/modules/utils/: gaussians.py  losses.py  sampling.py  tensors.py  train.py
src/utils/: gaussians.py
tests/: conftest.py  test_actnorm.py  test_affine_coupling.py  test_flow.py  test_flow_block.py  test_glow.py  test_invert_conv.py  test_trainer.py
tests/fixtures/: blocks.py  config.py  inputs.py  trainer.py
